CUDA error: Unknown Error (Viewport Shading crash - dual GPUs, Radeon + GTX 460) #31054

Closed
opened 2012-04-21 21:50:06 +02:00 by Jan Sandahl · 16 comments

%%%Windows 7 Pro (x64) Build 7601
Blender version 2.63 RC 1 / the previous testbuilds 1& 2, and 2.62.0, r44136)
ATI RADEON HD 5750 (on PCI-bus 6) latest drivers
Zotac / nVIDIA GTX 460 (on PCI-bus 1) latest drivers
Motherboard Asus P7P55D
6 GB RAM

Setup: ATI card connected to my monitor, while the GTX card is assigned to Blender / Cycles.

Problem:

  1. When changing Viewport Shading to "Rendered" with GPU I get: "Error | CUDA error: Unknown error"
  2. When changing back to CPU, Blender crashes - everytime with any scene.

Rendered view works fine with CPU.

Rendered view works fine when the GTX card is connected to my monitor.

This dual GPU setup has worked for me until recently. It seems to be related to system / windows and / or drivers because I just tried the Blender 2.61 release which hasn´t caused any troubles previously, but now crashes the same way. Also tried workarounds from forum threads with no luck.

%%%

%%%Windows 7 Pro (x64) Build 7601 Blender version 2.63 RC 1 / the previous testbuilds 1& 2, and 2.62.0, r44136) ATI RADEON HD 5750 (on PCI-bus 6) latest drivers Zotac / nVIDIA GTX 460 (on PCI-bus 1) latest drivers Motherboard Asus P7P55D 6 GB RAM Setup: ATI card connected to my monitor, while the GTX card is assigned to Blender / Cycles. Problem: 1. When changing Viewport Shading to "Rendered" with GPU I get: "Error | CUDA error: Unknown error" 2. When changing back to CPU, Blender crashes - everytime with any scene. Rendered view works fine with CPU. Rendered view works fine when the GTX card is connected to my monitor. This dual GPU setup has worked for me until recently. It seems to be related to system / windows and / or drivers because I just tried the Blender 2.61 release which hasn´t caused any troubles previously, but now crashes the same way. Also tried workarounds from forum threads with no luck. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%I'm not sure if we actually can help here, as you mentioned blender 2.61 worked for you before and now not -- most probably it's a glitch in OS or driver. Make sure you're using latest drivers and all updates are installed.
Maybe Brecht can give some more hints here?%%%

%%%I'm not sure if we actually can help here, as you mentioned blender 2.61 worked for you before and now not -- most probably it's a glitch in OS or driver. Make sure you're using latest drivers and all updates are installed. Maybe Brecht can give some more hints here?%%%
Author

%%%Well, I hope Brecht can drop a line about it, t would be much appreciated for a clueless non-tech guy like me. :)%%%

%%%Well, I hope Brecht can drop a line about it, t would be much appreciated for a clueless non-tech guy like me. :)%%%

%%%I don't have any experience with such a setup, so not sure why this error would happen.

If it's the CUDA installation that's messed up somehow, maybe ensure that you installed the NVidia drivers last, so that ATI didn't overwrite anything. You could also try installing a newer or somewhat older driver versions from the NVidia website, to see if that makes a difference.%%%

%%%I don't have any experience with such a setup, so not sure why this error would happen. If it's the CUDA installation that's messed up somehow, maybe ensure that you installed the NVidia drivers last, so that ATI didn't overwrite anything. You could also try installing a newer or somewhat older driver versions from the NVidia website, to see if that makes a difference.%%%

%%%Another things you could check is in User Preferences > System > Compute Devices, if in the list of devices there it shows anything strange, like the ATI card. That's just a random guess though, the Unknown Error unfortunately isn't telling me much.%%%

%%%Another things you could check is in User Preferences > System > Compute Devices, if in the list of devices there it shows anything strange, like the ATI card. That's just a random guess though, the Unknown Error unfortunately isn't telling me much.%%%
Member

%%%I have the same error with a similar setup: ATI 6770 and GTX 560Ti.
Latest drivers, will try older Nvidia drivers soon...
CUDA error in console:

CUDA error: Unknown error
CUDA error: Invalid context in cuMemAlloc(&device_pointer, mem.memory_size())
CUDA error: Invalid context in cuMemsetD8(cuda_device_ptr(mem.device_pointer), 0
, mem.memory_size())
CUDA error: Invalid context in cuMemAlloc(&device_pointer, mem.memory_size())
CUDA error: Invalid context in cuMemcpyHtoD(cuda_device_ptr(mem.device_pointer),
(void*)mem.data_pointer, mem.memory_size())
CUDA error: Invalid context in cuGraphicsGLRegisterBuffer(&pmem.cuPBOresource, p
mem.cuPBO, CU_GRAPHICS_MAP_RESOURCE_FLAGS_NONE)

What is most aggrevating about this is it is the same error message I got when trying to "double-GPU" on my Optimus laptop, which is why I bought an entire 2GPU desktop setup especially to use Cycles with it. Most disconcerting it doesn't work...%%%

%%%I have the same error with a similar setup: ATI 6770 and GTX 560Ti. Latest drivers, will try older Nvidia drivers soon... CUDA error in console: CUDA error: Unknown error CUDA error: Invalid context in cuMemAlloc(&device_pointer, mem.memory_size()) CUDA error: Invalid context in cuMemsetD8(cuda_device_ptr(mem.device_pointer), 0 , mem.memory_size()) CUDA error: Invalid context in cuMemAlloc(&device_pointer, mem.memory_size()) CUDA error: Invalid context in cuMemcpyHtoD(cuda_device_ptr(mem.device_pointer), (void*)mem.data_pointer, mem.memory_size()) CUDA error: Invalid context in cuGraphicsGLRegisterBuffer(&pmem.cuPBOresource, p mem.cuPBO, CU_GRAPHICS_MAP_RESOURCE_FLAGS_NONE) What is most aggrevating about this is it is the same error message I got when trying to "double-GPU" on my Optimus laptop, which is why I bought an entire 2GPU desktop setup especially to use Cycles with it. Most disconcerting it doesn't work...%%%
Member

%%%Has anyone got this scenario working, thats ATI card for OpenGL and nvidia for Cycles?

Its got NOTHING to do with Windows (my rapport above) or drivers or anything its a problem with the Cycles code.
Why do I say this? I just tested Blender on ArchLinux on the same computer setup and got exactly the same error messages but on Linux instead of Windows.
When switching display to nvidia also, Cycles with CUDA works without any problem...%%%

%%%Has anyone got this scenario working, thats ATI card for OpenGL and nvidia for Cycles? Its got NOTHING to do with Windows (my rapport above) or drivers or anything its a problem with the Cycles code. Why do I say this? I just tested Blender on ArchLinux on the same computer setup and got exactly the same error messages but on Linux instead of Windows. When switching display to nvidia also, Cycles with CUDA works without any problem...%%%

%%%Does regular non-viewport rendering (F12) work? If that works, the problem is likely related to CUDA/OpenGL interop
%%%

%%%Does regular non-viewport rendering (F12) work? If that works, the problem is likely related to CUDA/OpenGL interop %%%
Author

%%%F12 works fine for me!%%%

%%%F12 works fine for me!%%%

%%%Committed a possible fix to svn revision 46250, builds with this fix will be here in a few hours:
http://builder.blender.org/download/
%%%

%%%Committed a possible fix to svn revision 46250, builds with this fix will be here in a few hours: http://builder.blender.org/download/ %%%
Member

%%%Yes Brecht thx so much really .
It works, just tested Linux 64 build.
Must say quite some quick service and that for a free open source product!

%%%

%%%Yes Brecht thx so much really . It works, just tested Linux 64 build. Must say quite some quick service and that for a free open source product! %%%

%%%Great, looks like it's fixed then, closing report.%%%

%%%Great, looks like it's fixed then, closing report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Worked for me too, except that vcomp90.dll was missing. But after getting that in the right place it seems fine. Great support, thanks! :)%%%

%%%Worked for me too, except that vcomp90.dll was missing. But after getting that in the right place it seems fine. Great support, thanks! :)%%%
Author

%%%But hey! Who stole the fullscreen icon in the top menu bar? Alt + F11 still works though. :) %%%

%%%But hey! Who stole the fullscreen icon in the top menu bar? Alt + F11 still works though. :) %%%

%%%It got moved to the new Window menu.%%%

%%%It got moved to the new Window menu.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31054
No description provided.