Possible fix for #31054: cycles viewport rendering not working with CUDA for computation and ATI card for OpenGL.